--- a/Employee_retention_predixtion_model/Employee_retention_model.ipynb
+++ b/Employee_retention_predixtion_model/Employee_retention_model.ipynb
@@ -150,7 +150,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\bajju\\Downloads\\HR_comma_sep.csv\")\n",
+    "df = pd.read_csv()\n",
     "\n",
     "df.head()\n"
    ]
